tg-1919 [FIX] Roles para imprimir turnos del dia

--- a/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/select-agenda.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/routes/select-agenda/select-agenda.component.html
@@ -18,7 +18,7 @@
 	</mat-form-field>
 
 	<div class="actions" *ngIf="agendaSelected" fxLayout="row" fxLayoutGap="3px">
-		<button mat-flat-button color="primary" *hasRole="['ADMINISTRADOR_AGENDA']" id="print_agenda" name="print_agenda"
+		<button mat-flat-button color="primary" id="print_agenda" name="print_agenda"
 		        (click)="printAgenda()">
 			<mat-icon>print</mat-icon>
 		</button>
