tg-1905 fix responsive in footer logos

--- a/front-end/webapp/src/app/modules/presentation/components/footer/footer.component.html
+++ b/front-end/webapp/src/app/modules/presentation/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer-container">
+<div class="footer-container" fxLayout="row wrap">
 	<ng-container *ngFor="let img of images">
 		<img src="{{img.location}}" alt="{{img.alt}}">
 	</ng-container>
