tg-1903 fix responsive de agregar vacuna

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
@@ -13,7 +13,7 @@
 	</div>
 
 	<div fxLayout="row" fxLayoutGap="20px">
-		<div fxFlex="50">
+		<div fxFlex="50" fxFlex.xs="100">
 			<app-summary-card [header]="vacunasSummary"
                   [tooltip]="'historia-clinica.summary-card.vacunas.TOOLTIP'"
 				  [canEdit]="['PROFESIONAL_DE_SALUD', 'ESPECIALISTA_MEDICO', 'ENFERMERO']"
