--- a/front-end/webapp/src/styles.scss
+++ b/front-end/webapp/src/styles.scss
@@ -1,4 +1,5 @@
 @import './assets/styles/theme';
+@import './assets/styles/variables.scss';
 
 html,
 body {
@@ -34,4 +35,10 @@ section {
 
 .uppercase {
 	text-transform: uppercase;
+}
+
+@media (max-width: $mobile-popups) {
+	div.cdk-global-overlay-wrapper div.cdk-overlay-pane {
+		width: 100%;
+	}
 }
