--- a/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.html
+++ b/front-end/webapp/src/app/modules/pacientes/component/search-create/search-create.component.html
@@ -9,12 +9,9 @@
 			<div>
 				<mat-form-field appearance="outline">
 					<mat-label>Tipo</mat-label>
-					<mat-select
-						formControlName="identifType">
-						<mat-option
-							id="identifType"
-							name="identifType"
-							*ngFor="let type of identifyTypeArray" [value]="type.id">
+					<mat-select formControlName="identifType">
+						<mat-option id="identifType" name="identifType" *ngFor="let type of identifyTypeArray"
+							[value]="type.id">
 							{{type.description}}
 						</mat-option>
 					</mat-select>
@@ -24,12 +21,8 @@
 				</mat-form-field>
 				<mat-form-field appearance="outline">
 					<mat-label>Nro de documento</mat-label>
-					<input matInput
-						   type="text"
-						   id="identifNumber"
-						   name="identifNumber"
-						   formControlName="identifNumber"
-						   placeholder="Nro de documento">
+					<input matInput type="text" id="identifNumber" name="identifNumber" formControlName="identifNumber"
+						placeholder="Nro de documento">
 					<mat-error *ngIf="formSearchSubmitted &&  hasError(formSearch, 'required', 'identifNumber')">
 						El campo es requerido
 					</mat-error>
@@ -42,7 +35,8 @@
 				<mat-label>Sexo</mat-label>
 				<div>
 					<mat-radio-group name="gender" id="gender" formControlName="gender">
-						<mat-radio-button id="genderButton_{{gender.id}}" *ngFor="let gender of genderOptions" [value]="gender.id">
+						<mat-radio-button id="genderButton_{{gender.id}}" *ngFor="let gender of genderOptions"
+							[value]="gender.id">
 							{{gender.description}}
 						</mat-radio-button>
 					</mat-radio-group>
@@ -57,55 +51,36 @@
 						No acredita identidad
 					</mat-checkbox>
 				</section>
-
+				<mat-card-header *ngIf="noIdentity">
+					<mat-card-title [translate]="'pacientes.home.find_add_section.NO_IDENTITY'">
+					</mat-card-title>
+				</mat-card-header>
+				<mat-card-content *ngIf="noIdentity">
+					<mat-form-field appearance="outline">
+						<mat-label>Seleccione motivo</mat-label>
+						<mat-select formControlName="IdentityVerificationStatus">
+							<mat-option id="IdentityVerificationStatus"
+								*ngFor="let cause of IdentityVerificationStatusArray" [value]="cause.id">
+								{{cause.description}}
+							</mat-option>
+						</mat-select>
+						<mat-error>
+							El campo es requerido
+						</mat-error>
+					</mat-form-field>
+					<mat-form-field appearance="outline">
+						<mat-label>Comentarios</mat-label>
+						<textarea matInput cdkTextareaAutosize id="comments" cdkAutosizeMinRows="1"
+							cdkAutosizeMaxRows="5" formControlName="comments">
+						</textarea>
+					</mat-form-field>
+				</mat-card-content>
 			</div>
 			<div *hasRole="['ADMINISTRATIVO']" align="end">
-				<button mat-flat-button color="primary" type="submit" *ngIf="!noIdentity">
+				<button mat-flat-button color="primary" type="submit">
 					<span [translate]="'pacientes.home.find_add_section.BUTTON_SEARCH'"></span>
 				</button>
 			</div>
 		</mat-card-content>
 	</form>
-
-	<form [formGroup]="formAdd" (ngSubmit)="add()">
-		<mat-card-header *ngIf="noIdentity">
-			<mat-card-title
-				[translate]="'pacientes.home.find_add_section.NO_IDENTITY'"
-			>
-			</mat-card-title>
-		</mat-card-header>
-		<mat-card-content *ngIf="noIdentity">
-			<mat-form-field appearance="outline">
-				<mat-label>Seleccione motivo</mat-label>
-				<mat-select
-					formControlName="IdentityVerificationStatus">
-					<mat-option
-						id="IdentityVerificationStatus"
-						*ngFor="let cause of IdentityVerificationStatusArray" [value]="cause.id">
-						{{cause.description}}
-					</mat-option>
-				</mat-select>
-				<mat-error>
-					El campo es requerido
-				</mat-error>
-			</mat-form-field>
-			<mat-form-field appearance="outline">
-				<mat-label>Comentarios</mat-label>
-				<textarea
-					matInput
-					cdkTextareaAutosize
-					id="comments"
-					cdkAutosizeMinRows="1"
-					cdkAutosizeMaxRows="5"
-					formControlName="comments">
-				</textarea>
-			</mat-form-field>
-			<div align="end">
-				<button *hasRole="['ADMINISTRATIVO']" mat-flat-button color="primary" type="submit">
-					<span [translate]="'pacientes.home.find_add_section.BUTTON_ADD'"></span>
-				</button>
-			</div>
-		</mat-card-content>
-	</form>
 </mat-card>
-
